--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html class="no-js no-touch" lang="{{ request.locale.iso_code }}">
   <head>
+    <style>
+    a.btn.klaviyo-bis-trigger {
+      font-weight: bolder;
+    }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="cleartype" content="on">
     <meta name="robots" content="index,follow">
