--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,7 @@
     <style>
     a.btn.klaviyo-bis-trigger {
       font-weight: bolder;
+      font-size: 22px;
     }
     </style>
     <meta charset="utf-8">
