--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -188,10 +188,13 @@
 
       <div class="has-sidebar-option sidebar-enabled--{{ sidebar }}">
         {% if collection.description != blank %}
-          <div class="container">
+          {%- comment -%} <div class="container">
             <div class="one-whole column">
+              <div class="collection_description rte">
+                {{ collection.description }}
+              </div>
             </div>
-          </div>
+          </div> {%- endcomment -%}
         {% endif %}
 
         <div class="container">
@@ -212,9 +215,6 @@
               %}
             {% endif %}
           </div>
-              <div class="collection_description rte">
-                {{ collection.description }}
-              </div>
         </div>
 
         {% if settings.pagination_type == 'basic_pagination' %}
@@ -226,6 +226,13 @@
       </div>
     </div>
   {% endpaginate %}
+            <div class="container">
+            <div class="one-whole column">
+              <div class="collection_description rte">
+                {{ collection.description }}
+              </div>
+            </div>
+          </div>
   </div>
 </section>
 
