--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -115,14 +115,6 @@
     <link rel="dns-prefetch" href="https://monorail-edge.shopifysvc.com">
 
     <!-- Preload Assets -->
-    <link rel="preload" href="{{ 'fancybox.css' | asset_url }}" as="style">
-    <link rel="preload" href="{{ 'styles.css' | asset_url }}" as="style">
-
-    <link rel="preload" href="{{ 'jquery.min.js' | asset_url }}" as="script">
-    <link rel="preload" href="{{ 'vendors.js' | asset_url }}" as="script">
-    <link rel="preload" href="{{ 'sections.js' | asset_url }}" as="script">
-    <link rel="preload" href="{{ 'utilities.js' | asset_url }}" as="script">
-    <link rel="preload" href="{{ 'app.js' | asset_url }}" as="script">
 
     <!-- Stylesheet for Fancybox library -->
     {{ 'fancybox.css' | asset_url | stylesheet_tag }}
@@ -161,18 +153,18 @@
     <link rel="canonical" href="{{ canonical_url }}"/>
 
     {% if template contains 'customer' %}
-      <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
-      <script src="{{ 'customer_area.js' | shopify_asset_url }}" defer></script>
+      <script type="lazyload2" data-src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
+      <script type="lazyload2" data-src="{{ 'customer_area.js' | shopify_asset_url }}" defer></script>
     {% endif %}
 
-    <script src="{{ 'jquery.min.js' | asset_url }}" defer></script>
+    <script type="lazyload2" data-src="{{ 'jquery.min.js' | asset_url }}" defer></script>
 
     {% if settings.show_multiple_currencies or settings.show_shipping_calculator %}
       <script type="text/javascript" src="/services/javascripts/currencies.js" data-no-instant></script>
     {% endif %}
 
     {% if settings.show_multiple_currencies or shop.enabled_currencies.size > 1 %}
-      <script src="{{ 'currencies.js' | asset_url }}" defer></script>
+      <script type="lazyload2" data-src="{{ 'currencies.js' | asset_url }}" defer></script>
     {% endif %}
 
     {% comment %}Inject theme-object begin{% endcomment %}
@@ -213,21 +205,16 @@
       {% render 'js-variables' %}
     </script>
 
-    <script src="{{ 'vendors.js' | asset_url }}" defer></script>
-    <script src="{{ 'sections.js' | asset_url }}" defer></script>
-    <script src="{{ 'utilities.js' | asset_url }}" defer></script>
-    <script src="{{ 'app.js' | asset_url }}" defer></script>
+    <script type="lazyload2" data-src="{{ 'vendors.js' | asset_url }}" defer></script>
+    <script type="lazyload2" data-src="{{ 'sections.js' | asset_url }}" defer></script>
+    <script type="lazyload2" data-src="{{ 'utilities.js' | asset_url }}" defer></script>
+    <script type="lazyload2" data-src="{{ 'app.js' | asset_url }}" defer></script>
 
-    {% if settings.disqus_enabled %}
-      {% if template contains "blog" or template contains "article" or template contains "index" %}
-        <script id="dsq-count-scr" src="//{{ settings.disqus_shortname }}.disqus.com/count.js" async></script>
-      {% endif %}
-    {% endif %}
 
     {% unless settings.performance == "sport" or template contains "customer" %}
-      <script src="{{ 'instantclick.min.js' | asset_url }}" data-no-instant defer></script>
+      <script type="lazyload2" data-src="{{ 'instantclick.min.js' | asset_url }}" data-no-instant defer></script>
 
-      <script data-no-instant>
+      <script type="lazyload2" data-no-instant>
         window.addEventListener('DOMContentLoaded', function() {
 
           function inIframe() {
@@ -260,7 +247,7 @@
       </script>
     {% endunless %}
 
-    <script>
+    <script type="lazyload2">
       {{ settings.custom_scripts }}
     </script>
 
@@ -335,11 +322,11 @@
     {% if collection.next_product %}<link rel="next" href="{{ collection.next_product }}">{% endif %}
 
   <!-- TrustBox script -->
-    <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+    <script type="lazyload2" data-src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
   <!-- End TrustBox script -->
 
   <!-- Google tag (gtag.js) Analytics-->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-227862434-1"></script>
+<script async type="lazyload2" data-src="https://www.googletagmanager.com/gtag/js?id=UA-227862434-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -349,8 +336,8 @@
 </script>
 
   <!-- Google tag (gtag.js) Adwords -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10896187006"></script>
-<script>
+<script async type="lazyload2" data-src="https://www.googletagmanager.com/gtag/js?id=AW-10896187006"></script>
+<script type="lazyload2">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -483,8 +470,8 @@
     {% endif %}
 
     <!-- Klaviyo back in stock script -->  
-<script src="https://a.klaviyo.com/media/js/onsite/onsite.js"></script>
-<script>
+<script type="lazyload2" data-src="https://a.klaviyo.com/media/js/onsite/onsite.js"></script>
+<script type="lazyload2">
     var klaviyo = klaviyo || [];
     klaviyo.init({
         account: "UpTAMk",
